# obsidian-query

./: pyproject.toml  requirements.txt
obsidian_query/: obsidian_query.py
obsidian_query/src/: chat_engine.py  query_engine.py  vdb.py
